--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
 
-    <!-- React- Day -3 : https://startbootstrap.com/previews/sb-admin-2 -->
+    <!-- React- Day -4 : CRUD - Create,Read,Update,Delete in React -->
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
