CRUD - Create,Read,Update,Delete using useEffect Hook in React

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
 
-    <!-- React- Day -4 : CRUD - Create,Read,Update,Delete in React -->
+    <!-- React- Day -5 : CRUD - Create,Read,Update,Delete using useEffect Hook in React --> 
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
